[package]
name = "musplay"
version = "0.2.0"
authors = ["Jonas Minnberg <sasq64@gmail.com>"]
edition = "2024"

[profile.release]
desbug = 1

[dependencies]
walkdir = "2"
crossterm = "0.27.0"
musix = { path = "../musicplayer/" }
cpal = "0.15.3"
ringbuf = "0.4.1"
spectrum-analyzer = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"
regex = "1.10.4"
rhai = "1.18.0"
id3 = "1.13.1"
mp3-duration = "0.1.10"
tantivy = "0.22.0"
anyhow = "1.0"

