[package]
name = "oldplay"
version = "0.2.0"
authors = ["Jonas Minnberg <sasq64@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Text-mode music player for esoteric audio formats (music from C64,Amiga etc) and MP3 "
homepage = "https://github.com/sasq64/rustplay"

[profile.release]
debug = 1

[dependencies]
walkdir = "2"
crossterm = "0.27.0"
musix = "0.3.0"
# musix = { path = "../musicplayer/" }
rubato = "0.16.2"
cpal = "0.15.3"
ringbuf = "0.4.1"
spectrum-analyzer = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"
regex = "1.10.4"
rhai = { version = "1.18.0" }
id3 = "1.13.1"
mp3-duration = "0.1.10"
tantivy = "0.22.0"
anyhow = "1.0"
dirs = "6.0"
zip = "2.6.1"
smartstring = "1.0.1"

