[package]
name = "oldplay"
version = "0.3.0"
authors = ["Jonas Minnberg <sasq64@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Text-mode music player for esoteric audio formats (music from C64,Amiga etc) and MP3 "
homepage = "https://github.com/sasq64/rustplay"

[dependencies]
walkdir = "2"
crossterm = { version = "0.29.0", features = ["derive-more"] }
musix = "0.3.4"
# musix = { path = "../musicplayer/" }
rubato = "1.0.1"
cpal = "0.17.3"
ringbuf = "0.4.1"
spectrum-analyzer = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.14.0"
regex = "1.10.4"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
id3 = "1.13.1"
mp3-duration = "0.1.10"
tantivy = "0.25.0"
anyhow = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
dirs = "6.0"
zip = "8.4.0"
audioadapter-buffers = "2.0.0"
crokey = "1.4.0"
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
gag = "1.0"

[profile.release]
debug = true

[profile.final]
debug = false
inherits = "release"
lto = true
codegen-units = 1
strip = true
